// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VueBpPckg Component mounted VueBpPckg mounted correctly 1`] = `
<div
  class="vue-bp-pckg-wrapper"
>
  <span>
    this is a simple bp vue npm package
  </span>
</div>
`;

exports[`VueBpPckg Component mounted VueBpPckg with title prop set 1`] = `
<div
  class="vue-bp-pckg-wrapper"
>
  <span>
    this is a package
  </span>
</div>
`;
